# CGAL SuperBuild -*- CMake -*-
#
# Copyright (C) 2012 Guofu Xiang <gfxiang@gmail.com>.
# All rights reserved.

cmake_minimum_required(VERSION 2.8)

project(CGALSuperBuild)

set(CMAKE_MODULE_PATH
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_MODULE_PATH})

include(ExternalProject)

set(CGAL_DEPENDS)

find_package(GMP)
if(NOT GMP_FOUND)
  include(ExternalGMP)
  APPEND(CGAL_DEPENDS gmp)
endif()

find_package(MPFR)
if(NOT MPFR_FOUND)
  include(ExternalMPFR)
  APPEND(CGAL_DEPENDS mpfr)
endif()

set(CGAL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
set(CGAL_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/CGAL-build)
set(CGAL_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})

ExternalProject_Add(CGAL
  SOURCE_DIR ${CGAL_SOURCE_DIR}
  BINARY_DIR ${CGAL_BINARY_DIR}
  INSTALL_DIR ${CGAL_INSTALL_DIR}
  UPDATE_COMMAND ""
  PATCH_COMMAND ""
  CMAKE_ARGS
    -DGMP_LIBRARIES:STRING=${GMP_LIBRARIES}
    -DMPFR_LIBRARIES:STRING=${MPFR_LIBRARIES}
  CMAKE_CACHE_ARGS
    -DCMAKE_BUILD_TYPE:STRING=Release
    -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}
    -DGMP_INCLUDE_DIR:PATH=${GMP_INCLUDE_DIR}
    -DGMP_LIBRARY:PATH=${GMP_LIBRARY}
    -DMPFR_INCLUDE_DIR:PATH=${MPFR_INCLUDE_DIR}
    -DMPFR_LIBRARY:PATH=${MPFR_LIBRARY}
  DEPENDS ${CGAL_DEPENDS})
